--- a/RMRefresh/Podfile
+++ b/RMRefresh/Podfile
@@ -1,3 +1,8 @@
 platform :ios, '8.0'
 
-pod 'AFNetworking', '3.0.0-beta.2'
+target 'RMRefresh' do
+
+pod 'AFNetworking', '~> 3.0.4'
+pod 'SVProgressHUD', '~> 2.0'
+
+end
