--- a/RMRefresh/Podfile
+++ b/RMRefresh/Podfile
@@ -4,5 +4,7 @@ target 'RMRefresh' do
 
 pod 'AFNetworking', '~> 3.0.4'
 pod 'SVProgressHUD', '~> 2.0'
+pod 'DZNEmptyDataSet', '~> 1.8.1'
+pod 'FDFullscreenPopGesture', '~> 1.1'
 
 end
